--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 	<head> 
 	<title>Jquery Mobile Splitview</title> 
   <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
-	<link rel="stylesheet" href="../../compiled/jquery.mobile.css" />
+	<link rel="stylesheet" href="jquery.mobile.css" />
 	<link rel="stylesheet" href="jquery.mobile.splitview.css" />
   <link rel="stylesheet"  href="jquery.mobile.grids.collapsible.css" />
   <script type="text/javascript" src="jquery-1.7.1.js"></script>
   <script type="text/javascript" src="jquery.mobile.splitview.js"></script>
-  <script type="text/javascript" src="../../compiled/jquery.mobile.js"></script>
+  <script type="text/javascript" src="jquery.mobile.js"></script>
   <script type="text/javascript" src="iscroll-wrapper.js"></script>
   <script type="text/javascript" src="iscroll.js"></script>
   <!--script type="text/javascript" src="scrollability.js"></script-->
